# question-answering-service

./: .gitignore  README.md  docker-compose.yml
conversational-service/: Dockerfile  README.md  pyproject.toml
conversational-service/api/: main.py
diagrams/: system-architecture.drawio
qa-service/: Dockerfile  pyproject.toml
qa-service/api/: example_api_call.py  main.py
qa-service/notebooks/: example-ingestion.ipynb
qa-service/qa_service/: embedding_layer.py  exceptions.py  load_data_to_vectordb.py  utils.py  weaviate_layer.py
qa-service/qa_service/models/: wine_item.py
qa-service/tests/: test_embedding_layer.py  test_utils.py
qa-service/tests/test_models/: test_wine_item.py
qa-ui/: Dockerfile  pyproject.toml
qa-ui/qa_ui/: main.py
